# test

./: .gitignore  CHANGELOG.md  Cargo.toml  go.mod  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.ts
.cargo/: config.toml
.github/workflows/: ci.yml  deno.yml  go.yml  pnpm.yml  rust.yml  yarn.yml
__test__/: index.spec.mjs
js/: changelog.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  main.go  main.rs
src/pkg/: pkg_test.go
ts/: index.ts
