[package]
edition = "2021"
name = "rs-md"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
markdown = "1.0.0"
mdxjs = "1.0.4"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = "1.0.219"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
